Avoid extra whitespace around flash-video objects
Shrink-to-fit on .flash-video + remove line-height

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -46,6 +46,9 @@ article {
     @extend .flex-content;
     @extend .basic-alignment;
     @include shadow-box;
+    // avoid extra space
+    display: inline-block; 
+    line-height: 0;
   }
   video, .flash-video { margin: 0 auto 1.5em; }
   video { display: block; width: 100%; }
